--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,8 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
+	width: 100%;
+	height: 100%;
 }
 
 /* dark mode looking scrollbar */
